infra/main.json
{
  "$schema": "https://schema.management.azure.com/schemas/2019-04-01/deploymentTemplate.json#",
  "contentVersion": "1.0.0.0",
  "metadata": {
    "_generator": {
      "name": "bicep",
      "version": "0.45.15.27210",
      "templateHash": "15949266204397571059"
    }
  },
  "parameters": {
    "location": {
      "type": "string",
      "defaultValue": "[resourceGroup().location]",
      "metadata": {
        "description": "The location for all resources."
      }
    }
  },
  "resources": [
    {
      "type": "Microsoft.Network/networkSecurityGroups",
      "apiVersion": "2025-07-01",
      "name": "nsg-empty",
      "location": "[parameters('location')]",
      "properties": {
        "securityRules": []
      },
      "metadata": {
        "description": "This NSG has no security rules and is not associated with any NIC or Subnet."
      }
    },
    {
      "type": "Microsoft.Network/networkSecurityGroups",
      "apiVersion": "2025-07-01",
      "name": "nsg-allow-all",
      "location": "[parameters('location')]",
      "properties": {
        "securityRules": [
          {
            "name": "AllowAllInbound",
            "properties": {
              "priority": 100,
              "direction": "Inbound",
              "access": "Allow",
              "protocol": "*",
              "sourcePortRange": "*",
              "destinationPortRange": "*",
              "sourceAddressPrefix": "*",
              "destinationAddressPrefix": "*"
            }
          },
          {
            "name": "AllowAllOutbound",
            "properties": {
              "priority": 200,
              "direction": "Outbound",
              "access": "Allow",
              "protocol": "*",
              "sourcePortRange": "*",
              "destinationPortRange": "*",
              "sourceAddressPrefix": "*",
              "destinationAddressPrefix": "*"
            }
          }
        ]
      },
      "metadata": {
        "description": "This NSG has security rules that allow all inbound and outbound traffic and is not associated with any NIC or Subnet."
      }
    },
    {
      "type": "Microsoft.Network/networkSecurityGroups",
      "apiVersion": "2025-07-01",
      "name": "nsg-conflicting-rules",
      "location": "[parameters('location')]",
      "properties": {
        "securityRules": [
          {
            "name": "AllowHttpInbound",
            "properties": {
              "priority": 100,
              "direction": "Inbound",
              "access": "Allow",
              "protocol": "Tcp",
              "sourcePortRange": "*",
              "destinationPortRange": "80",
              "sourceAddressPrefix": "*",
              "destinationAddressPrefix": "*"
            }
          },
          {
            "name": "AllowHttpsInbound",
            "properties": {
              "priority": 200,
              "direction": "Inbound",
              "access": "Allow",
              "protocol": "Tcp",
              "sourcePortRange": "*",
              "destinationPortRange": "443",
              "sourceAddressPrefix": "*",
              "destinationAddressPrefix": "*"
            }
          },
          {
            "name": "DenyHttpInbound",
            "properties": {
              "priority": 300,
              "direction": "Inbound",
              "access": "Deny",
              "protocol": "Tcp",
              "sourcePortRange": "*",
              "destinationPortRange": "80",
              "sourceAddressPrefix": "*",
              "destinationAddressPrefix": "*"
            }
          }
        ]
      },
      "metadata": {
        "description": "This NSG has conflicting inbound rules for HTTP traffic and is not associated with any NIC or Subnet."
      }
    },
    {
      "type": "Microsoft.Network/networkSecurityGroups",
      "apiVersion": "2025-07-01",
      "name": "nsg-nic-empty",
      "location": "[parameters('location')]",
      "properties": {
        "securityRules": []
      },
      "metadata": {
        "description": "This NSG has no security rules and is associated with a NIC."
      }
    },
    {
      "type": "Microsoft.Network/networkSecurityGroups",
      "apiVersion": "2025-07-01",
      "name": "nsg-nic-allow-all",
      "location": "[parameters('location')]",
      "properties": {
        "securityRules": [
          {
            "name": "AllowAllInbound",
            "properties": {
              "priority": 100,
              "direction": "Inbound",
              "access": "Allow",
              "protocol": "*",
              "sourcePortRange": "*",
              "destinationPortRange": "*",
              "sourceAddressPrefix": "*",
              "destinationAddressPrefix": "*"
            }
          },
          {
            "name": "AllowAllOutbound",
            "properties": {
              "priority": 200,
              "direction": "Outbound",
              "access": "Allow",
              "protocol": "*",
              "sourcePortRange": "*",
              "destinationPortRange": "*",
              "sourceAddressPrefix": "*",
              "destinationAddressPrefix": "*"
            }
          }
        ]
      },
      "metadata": {
        "description": "This NSG has security rules that allow all inbound and outbound traffic and is associated with a NIC."
      }
    },
    {
      "type": "Microsoft.Network/networkSecurityGroups",
      "apiVersion": "2025-07-01",
      "name": "nsg-subnet-empty",
      "location": "[parameters('location')]",
      "properties": {
        "securityRules": []
      },
      "metadata": {
        "description": "This NSG has no security rules and is associated with a Subnet."
      }
    },
    {
      "type": "Microsoft.Network/networkSecurityGroups",
      "apiVersion": "2025-07-01",
      "name": "nsg-subnet-allow-all",
      "location": "[parameters('location')]",
      "properties": {
        "securityRules": [
          {
            "name": "AllowAllInbound",
            "properties": {
              "priority": 100,
              "direction": "Inbound",
              "access": "Allow",
              "protocol": "*",
              "sourcePortRange": "*",
              "destinationPortRange": "*",
              "sourceAddressPrefix": "*",
              "destinationAddressPrefix": "*"
            }
          },
          {
            "name": "AllowAllOutbound",
            "properties": {
              "priority": 200,
              "direction": "Outbound",
              "access": "Allow",
              "protocol": "*",
              "sourcePortRange": "*",
              "destinationPortRange": "*",
              "sourceAddressPrefix": "*",
              "destinationAddressPrefix": "*"
            }
          }
        ]
      },
      "metadata": {
        "description": "This NSG has security rules that allow all inbound and outbound traffic and is associated with a Subnet."
      }
    },
    {
      "type": "Microsoft.Network/virtualNetworks",
      "apiVersion": "2025-07-01",
      "name": "vnet-security-test",
      "location": "[parameters('location')]",
      "properties": {
        "addressSpace": {
          "addressPrefixes": [
            "10.0.0.0/16"
          ]
        }
      }
    },
    {
      "type": "Microsoft.Network/virtualNetworks/subnets",
      "apiVersion": "2025-07-01",
      "name": "[format('{0}/{1}', 'vnet-security-test', 'subnet-nsg-empty')]",
      "properties": {
        "addressPrefix": "10.0.1.0/24",
        "networkSecurityGroup": {
          "id": "[resourceId('Microsoft.Network/networkSecurityGroups', 'nsg-subnet-empty')]"
        }
      },
      "dependsOn": [
        "[resourceId('Microsoft.Network/networkSecurityGroups', 'nsg-subnet-empty')]",
        "[resourceId('Microsoft.Network/virtualNetworks', 'vnet-security-test')]"
      ]
    },
    {
      "type": "Microsoft.Network/virtualNetworks/subnets",
      "apiVersion": "2025-07-01",
      "name": "[format('{0}/{1}', 'vnet-security-test', 'subnet-nsg-allow-all')]",
      "properties": {
        "addressPrefix": "10.0.2.0/24",
        "networkSecurityGroup": {
          "id": "[resourceId('Microsoft.Network/networkSecurityGroups', 'nsg-subnet-allow-all')]"
        }
      },
      "dependsOn": [
        "[resourceId('Microsoft.Network/networkSecurityGroups', 'nsg-subnet-allow-all')]",
        "[resourceId('Microsoft.Network/virtualNetworks', 'vnet-security-test')]"
      ]
    },
    {
      "type": "Microsoft.Network/virtualNetworks/subnets",
      "apiVersion": "2025-07-01",
      "name": "[format('{0}/{1}', 'vnet-security-test', 'subnet-nsg-none')]",
      "properties": {
        "addressPrefix": "10.0.3.0/24"
      },
      "dependsOn": [
        "[resourceId('Microsoft.Network/virtualNetworks', 'vnet-security-test')]"
      ],
      "metadata": {
        "description": "This subnet has no NSG associated with it which results in a Security recommendation from Azure Advisor."
      }
    },
    {
      "type": "Microsoft.Network/networkInterfaces",
      "apiVersion": "2025-07-01",
      "name": "nic-nsg-empty",
      "location": "[parameters('location')]",
      "properties": {
        "ipConfigurations": [
          {
            "name": "ipconfig1",
            "properties": {
              "privateIPAllocationMethod": "Dynamic",
              "subnet": {
                "id": "[resourceId('Microsoft.Network/virtualNetworks/subnets', 'vnet-security-test', 'subnet-nsg-empty')]"
              }
            }
          }
        ],
        "networkSecurityGroup": {
          "id": "[resourceId('Microsoft.Network/networkSecurityGroups', 'nsg-nic-empty')]"
        }
      },
      "dependsOn": [
        "[resourceId('Microsoft.Network/networkSecurityGroups', 'nsg-nic-empty')]",
        "[resourceId('Microsoft.Network/virtualNetworks/subnets', 'vnet-security-test', 'subnet-nsg-empty')]"
      ]
    },
    {
      "type": "Microsoft.Network/networkInterfaces",
      "apiVersion": "2025-07-01",
      "name": "nic-nsg-allow-all",
      "location": "[parameters('location')]",
      "properties": {
        "ipConfigurations": [
          {
            "name": "ipconfig1",
            "properties": {
              "privateIPAllocationMethod": "Dynamic",
              "subnet": {
                "id": "[resourceId('Microsoft.Network/virtualNetworks/subnets', 'vnet-security-test', 'subnet-nsg-allow-all')]"
              }
            }
          }
        ],
        "networkSecurityGroup": {
          "id": "[resourceId('Microsoft.Network/networkSecurityGroups', 'nsg-nic-allow-all')]"
        }
      },
      "dependsOn": [
        "[resourceId('Microsoft.Network/networkSecurityGroups', 'nsg-nic-allow-all')]",
        "[resourceId('Microsoft.Network/virtualNetworks/subnets', 'vnet-security-test', 'subnet-nsg-allow-all')]"
      ]
    }
  ]
}
